# qml-anomaly-detection

./: .gitignore  README.md  pyproject.toml  setup.py
classical-models/: important_features.py  main.py  models.py  process.txt  test.py
cqu/: README.md
cqu/__logging/: __init__.py  __logger.py
cqu/classical/: __init__.py  helpers.py  important_features.py  main.py  models.py
cqu/classical_models/: __init__.py  important_features.py  main.py  models.py  plotter.py
cqu/classifier/: __init__.py  classifier.py  metrics.py
cqu/logging/: __init__.py  logger.py
cqu/preprocessing/: __init__.py  missing_values.py  preprocessor.py  smote.py  standardization.py  type_conversion.py
cqu/quantum/: __init__.py  quantumsvm.py
cqu/quantum_embedding/: __init__.py  quantum_classifier.py
cqu/quantum_testing/: approaches.py  vqc.py
cqu/typing/: __init__.py
cqu/utils/: __init__.py  classifier.py  metrics.py  plotting.py
datasets/: README.md  add_header_to_csv.ipynb  dataset_install.py  eda.ipynb  quantum_classifier.ipynb  test.ipynb
tests/: __init__.py  classic_test.py  classic_test_best_model.py  example.py  example2.py  qsvm_penny.py  quantum_svm.py  test_missing.py  test_preprocessing.py  test_smote.py  test_standardization.py  test_types.py
tests/classical_models/: __init__.py  test_all.py
tests/preprocessing/: __init__.py  test_smote.py  test_standardization.py  test_types.py
tests/quantum_testing/: approaches.py  vqc.py
