[[tool.poetry.source]]
name = "pytorch-gpu-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-gpu-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
jupyterlab = "^4.2.5"
pre-commit = "^4.0.1"

[tool.poetry]
name = "qml-anomaly-detection"
version = "0.1.0"
description = ""
authors = ["Manoj E S <manoj.es.professional@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qiskit = {extras = ["visualization"], version = "^1.2.4"}
# torch = {version = "^2.4.1+cu121", source = "pytorch-gpu-cu121"}
qiskit-ibm-runtime = "^0.30.0"
qiskit-machine-learning = "^0.8.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pandas = "^2.2.3"
dask = {extras = ["complete"], version = "^2024.9.1"}
imblearn = "^0.0"
qiskit-aer-gpu = "^0.15.1"
gdown = "^5.2.0"


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
