[[tool.poetry.source]]
name = "pytorch-gpu-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-gpu-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
jupyterlab = "^4.2.5"
pre-commit = "^4.0.1"
pytest = "^8.3.3"


[tool.poetry.group.cqu.dependencies]
imbalanced-learn = "^0.12.4"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
qiskit = "^1.3.1"
qiskit-machine-learning = "^0.8.2"
qiskit-aer = "^0.15.1"
qiskit-algorithms = "^0.3.1"
qiskit-ibm-runtime = "^0.30.0"

[tool.poetry]
name = "cqu"
version = "0.1.0"
description = ""
authors = ["Manoj E S <manoj.es.professional@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qiskit = {extras = ["visualization"], version = "^1.2.4"}
# torch = {version = "^2.4.1+cu121", source = "pytorch-gpu-cu121"}
qiskit-ibm-runtime = "^0.30.0"
qiskit-machine-learning = "^0.8.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pandas = "^2.2.3"
dask = {extras = ["complete"], version = "^2024.9.1"}
imblearn = "^0.0"
# qiskit-aer-gpu = "^0.15.1"
gdown = "^5.2.0"
openpyxl = "^3.1.5"


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
